--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ h4 {
 	font-weight: 900;
 	color: #fff;
 	font-size: 70px;
+	margin: 0;
 }
 
 h5 {
@@ -44,7 +45,7 @@ h5 a:active { color: #fff; text-decoration: none; font-weight: 400;}
 	padding: 5px;
 	white-space: nowrap;
 	overflow: hidden;
-	border: 2px solid #ff;
+	border: 2px solid #fff;
 	background: rgba(255, 255, 255, 0.1);
 
 	-webkit-border-radius: 5px;
@@ -53,6 +54,40 @@ h5 a:active { color: #fff; text-decoration: none; font-weight: 400;}
 
 	border: 3px solid #fff;
 
+}
+
+.line {
+	float: left; 
+	width: 100%; 
+	display: block; 
+	position: relative;
+}
+
+#header {
+	position: relative; 
+	left: 100%; 
+	float: left; 
+	margin-left: -65%; 
+	margin-top: 6%;
+}
+
+#fauxNav {
+	position: relative; 
+	float: left; 
+	bottom: 100%; 
+	left: 100%; 
+	margin-left: -17%; 
+	overflow: hidden;
+}
+
+#fauxName {
+	margin-top: 13%;
+	position: relative; 
+	float: left; 
+	left: 100%; 
+	margin-left: -95%; 
+	overflow: hidden;
+	height: 85px;
 }
 
 
@@ -66,7 +101,7 @@ ul.nav {
 	font-size: 70px;
 	padding: 20px;
 	list-style: none;
-	
+	margin: 0;
 }
 .nav li a {
 	padding-left: 20px;
