--- a/main.css
+++ b/main.css
@@ -63,13 +63,34 @@ h5 a:active { color: #fff; text-decoration: none; font-weight: 400;}
 	position: relative;
 }
 
-#header {
+.header {
 	position: relative; 
 	left: 100%; 
 	float: left; 
-	margin-left: -65%; 
+	margin-left: -52%; 
 	margin-top: 6%;
 }
+
+.l1 {
+	margin-top: 1%;
+	margin-left: -67%;
+}
+
+.l2 {
+	margin-top: 1%;
+	margin-left: -62%;
+}
+
+.l3 {
+	margin-top: 1%;
+	margin-left: -50%;
+}
+
+.l4 {
+	margin-top: 1%;
+	margin-left: -55%;
+}
+
 
 #fauxNav {
 	position: relative; 
@@ -88,6 +109,13 @@ h5 a:active { color: #fff; text-decoration: none; font-weight: 400;}
 	margin-left: -95%; 
 	overflow: hidden;
 	height: 85px;
+}
+
+#content {
+	font-family: 'Lato', sans-serf;
+	font-weight: 100;
+	color: #fff;
+	font-size: 70px;
 }
 
 
