--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ ul.nav {
 /* background */
 html { 
    min-width: 1650px;
-   background: url('londanBlur.png') no-repeat center center fixed; 
+   background: url('../londanBlur.png') no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
