--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,67 @@
-h1 {
-	color: #fff;
+@font-face {
+  font-family: 'Uni Sans';
+  font-weight: 100;
+  src: url('../unisansfree/Uni Sans Thin.otf');
+}
+@font-face {
+  font-family: 'Uni Sans';
+  font-weight: 700;
+  src: url('../unisansfree/Uni Sans Heavy.otf');
 }
 
-h4 {
-	font-family: 'Lato', sans-serif;
-	font-weight: 900;
-	color: #fff;
-	font-size: 70px;
-	margin: 0;
+
+/* background */
+html { 
+   background: url('../londanBlur.png') no-repeat center center fixed; 
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
 }
 
-h5 {
-	font-family: 'Lato', sans-serf;
-	font-weight: 100;
-	color: #fff;
-	font-size: 70px;
+@media all and (min-width: 1300px){
+	body {
+		font-size: 17px;
+	}
 }
+
+@media all and (max-width: 1299px) and (min-width: 1060px){
+	body {
+		font-size: 14px;
+	}
+
+	.second {
+		max-height: 1.2em !important;
+	}
+}
+
+@media all and (max-width: 1059px) and (min-width: 910px){
+	body {
+		font-size: 12px;
+	}
+	.second {
+		max-height: 1.2em !important;
+	}
+}
+
+@media all and (max-width: 909px) and (min-width: 605px){
+	body {
+		font-size: 8px;
+	}
+	.second {
+		max-height: 1.2em !important;
+	}
+}
+
+@media all and (max-width: 604px){
+	body {
+		font-size: 5px;
+	}
+	.second {
+		max-height: 1.2em !important;
+	}
+}
+
 
 /* failed nav bar attempt */
 h5 a:visited { color: #fff; text-decoration: none;}
@@ -24,90 +70,131 @@ h5 a:hover { color: #fff; text-decoration: none; font-weight: 400;}
 h5 a:active { color: #fff; text-decoration: none; font-weight: 400;}
 
 .first {
-	font-family: 'Lato', sans-serif;
+	font-family: 'Uni Sans', sans-serif;
 	font-weight: 100;
 	color: #fff;
-	font-size: 45px;
+	font-size: 2.8em;
 	float: left;
-	margin-left: 50px;
+	margin: 0 auto;
 	padding: 5px;
 	white-space: nowrap;
 	overflow: hidden;
+	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
 }
 
 .second {
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
+	font-family: 'Uni Sans', sans-serif;
+	font-weight: 700;
+	color: #fff;
+	font-size: 3em;
+	max-height: 1.5em;
+	margin-left: 10px;
+	padding: 2.5px;
+	white-space: nowrap;
+	float: left;
+	overflow: hidden;
+}
+
+.switch {
+	border-bottom: 2px solid #FF8000;
+	border-top: 2px solid #FF8000;
+}
+
+.infoContent {
+	margin: 0 auto;
+	margin-top: 10em;
+	text-align: center;
+	width: 74em;
+	position: relative;
+}
+
+.headerContent {
+	font-family: 'Uni Sans', sans-serif;
+	font-weight: 700;
+	color: #fff;
+	font-size: 3em;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	margin-top: 3em;
+	text-align: center;
+}
+
+.headerContent > a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.headerContent > a:nth-child(2), 
+.headerContent > a:nth-child(3) {
+	margin-left: 2em;
+}
+
+.headerContent > a:hover {
+	color: rgba(255, 128, 0, 0.8);
+	cursor: pointer;
+}
+
+.footerContent {
+	font-family: 'Uni Sans', sans-serif;
+	font-weight: 100;
 	color: #fff;
 	font-size: 50px;
-	float: left;
-	margin-left: 10px;
-	padding: 5px;
-	white-space: nowrap;
-	overflow: hidden;
-	border: 2px solid #fff;
-	background: rgba(255, 255, 255, 0.1);
-
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-
-	border: 3px solid #fff;
-
+	position: relative;
 }
 
 .line {
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.line:nth-child(1){
+	margin-left: 16em;
+}
+
+.line:nth-child(2){
+	margin-left: 3em;
+}
+
+.line:nth-child(3){
+	margin-left: 16em;
+}
+
+.line:nth-child(4){
+	margin-left: 14em;
+}
+
+.line:nth-child(5){
+	margin-left: 13.8em;
+}
+
+.bottomLine {
 	float: left; 
 	width: 100%; 
 	display: block; 
 	position: relative;
+	height: 50%;
 }
 
 .header {
-	position: relative; 
-	left: 100%; 
-	float: left; 
-	margin-left: -52%; 
-	margin-top: 1%;
+	color: #fff;
+	margin: 0 auto;
 }
-
-.l1 {
-	margin-top: 1%;
-	margin-left: -67%;
-}
-
-.l2 {
-	margin-top: 1%;
-	margin-left: -62%;
-}
-
-.l3 {
-	margin-top: 1%;
-	margin-left: -50%;
-}
-
-.l4 {
-	margin-top: 1%;
-	margin-left: -55%;
-}
-
 
 #fauxNav {
-	position: relative; 
+	position: absolute;
 	float: left; 
-	bottom: 100%; 
-	left: 100%; 
-	margin-left: -20%; 
+	bottom: 0;
+	right: 2em;
 	overflow: hidden;
 }
 
 #fauxName {
-	margin-top: 13%;
-	position: relative; 
+	position: absolute; 
 	float: left; 
-	left: 100%; 
-	margin-left: -95%; 
 	overflow: hidden;
+	bottom: 0;
+	left: 1em;
 	height: 85px;
 }
 
@@ -150,18 +237,6 @@ ul.nav {
 	border-left: 5px solid #fff;
 	padding-left: 15px;
 }
-
-/* background */
-html { 
-   min-width: 1650px;
-   background: url('../londanBlur.png') no-repeat center center fixed; 
-   -webkit-background-size: cover;
-   -moz-background-size: cover;
-   -o-background-size: cover;
-   background-size: cover;
-}
-
-
 
 
 
@@ -207,6 +282,12 @@ html {
 	visibility: hidden;
 	height: 0;
 
+}
+
+.itemwrap li > span > em {
+	font-weight: 100;
+	font-size: 0.4em;
+	color: #FF8000;
 }
 
 .itemwrap li.current,
@@ -269,15 +350,10 @@ html {
 
 
 
+
+
+
 /* full page content transition */
-.content {
-	max-width: 100%;
-	position: relative;
-	margin: 0 auto;
-	padding: 0;
-	overflow: hidden;
-	
-}
 
 .content > ul {
 	margin: 0;
