--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,8 @@ h5 a:active { color: #fff; text-decoration: none; font-weight: 400;}
 }
 
 .headerContent > a:nth-child(2), 
-.headerContent > a:nth-child(3) {
+.headerContent > a:nth-child(3),
+.headerContent > a:nth-child(4) {
 	margin-left: 2em;
 }
 
