--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,17 @@ canvas {
 	margin-top: 0;
 }
 
+.before {
+	padding: 10px 15px;
+	margin-top: 350px;
+}
+
+.rectangle {
+	color: #DB5461;
+	padding: 10px 15px;
+	border: 4px solid;
+}
+
 .landing {
 	height: 100%;
 	background-color: #F2F2F2;
@@ -158,13 +169,11 @@ canvas {
 	opacity: 0.5;
 }
 
-.blurb a {
+.rectangle a {
 	color: #db5461 !important;
-	text-decoration: none;
-	border-bottom: 2px dashed;
 }
 
-.blurb a:hover {
+.rectangle a:hover {
 	opacity: 0.7;
 }
 
