--- a/css/main.css
+++ b/css/main.css
@@ -110,12 +110,21 @@ canvas {
 .before {
 	padding: 10px 15px;
 	margin-top: 350px;
+	color: #db5461;
 }
 
 .rectangle {
-	color: #DB5461;
+	color: #1d1d1d;
 	padding: 10px 15px;
 	border: 4px solid;
+}
+
+.rectangle a {
+	color: #db5461 !important;
+}
+
+.rectangle a:hover {
+	opacity: 0.7;
 }
 
 .landing {
@@ -169,13 +178,6 @@ canvas {
 	opacity: 0.5;
 }
 
-.rectangle a {
-	color: #db5461 !important;
-}
-
-.rectangle a:hover {
-	opacity: 0.7;
-}
 
 .spacer {
 	height: 250px;
